Updated the travis yaml file

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,16 @@ before_install:
 
 script:
   - docker run -e CI=true lukondefmwila/dockerized-react-app npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-west-1"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-eu-west-1-260467446506"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: 
+    secure: "$AWS_SECRET_KEY"
