Updated the travis config file. Updated deployment configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: generic 
+language: generic
 
 sudo: required # we need super user permissions
 services:
@@ -8,17 +8,16 @@ before_install:
   - docker build -t lukondefmwila/dockerized-react-app -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true lukondefmwila/dockerized-react-app npm run test -- --coverage
+  - docker run -e CI=true lukondefmwila/dockerized-react-app npm test
 
 deploy:
   provider: elasticbeanstalk
-  region: "eu-west-1"
-  app: "docker-react"
-  env: "DockerReact-env"
-  bucket_name: "elasticbeanstalk-eu-west-1-260467446506"
-  bucket_path: "docker-react"
+  region: eu-west-1
+  app: docker-react-app
+  env: DockerReactApp-env
+  bucket_name: elasticbeanstalk-eu-west-1-776008521384
+  bucket_path: docker-react-app
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: 
-    secure: "$AWS_SECRET_KEY"
+  secret_access_key: $AWS_SECRET_KEY
