refactor: updated main branch for repo source for pipeline

--- a/copilot/pipeline.yml
+++ b/copilot/pipeline.yml
@@ -14,7 +14,7 @@ source:
   # the artifacts should be sourced from. For example, the GitHub provider
   # has the following properties: repository, branch.
   properties:
-    branch: main
+    branch: master
     repository: https://github.com/LukeMwila/dockerized-react-app
 
 # The deployment section defines the order the pipeline will deploy
